# lufthansa-inspiria-strands

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  supervisor.strands.json
destination_scout/: __init__.py  agent.py  handler.py  service.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  SEARCHAPI_USAGE.md  bianca.md  gina.md  paula.md
flight_search/: agent.py  handler.py  service.py
frontend/: antiPhaser.mjs  derDrucker.mjs  google-api.mjs  persona.js  proxy.mjs  s3escalator.mjs
frontend/bianca/: config.json  index.html  log.php
frontend/gina/: config.json  index.html  log.php
frontend/origin/: config.json  index.html  log.php
frontend/overview/: briefing.html  index.html
frontend/paul/: config.json  index.html  log.php
scripts/: __init__.py  chat_agent.py  run_destination_scout.py  run_flight_search.py  run_supervisor_composer.py
shared/: flight_utils.py  personas.py  prompts.py
supervisor/: agent.py  composer.py  handler.py  renderers.py  tools.py  weather.py
tests/: __init__.py  conftest.py  test_chat_agent.py  test_destination_scout_service.py  test_flight_search_service.py  test_flight_utils.py  test_placeholder.py  test_supervisor_handler.py  test_supervisor_renderers.py  test_supervisor_tools.py
